--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,9 @@
   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <gpg.executable>gpg</gpg.executable>
+    <gpg.keyname>${env.GPG_KEYNAME}</gpg.keyname>
+    <gpg.passphrase>${env.GPG_PASSPHRASE}</gpg.passphrase>
   </properties>
   <dependencies>
     <dependency>
